--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,6 @@ fabric.properties
 
 # End of https://www.gitignore.io/api/composer,phpstorm
 
-confing/*
+config/profile.php
+config/profile.dev.php
+config/profile.product.php
