디자인 수정 autolinker 추가

--- a/js/package.json
+++ b/js/package.json
@@ -23,6 +23,7 @@
     "webpack-cli": "^3.0.8"
   },
   "dependencies": {
+    "autolinker": "^3.0.0",
     "babel-core": "^6.26.3",
     "jquery": "^3.3.1",
     "ramda": "^0.25.0"
